# tinkpad

./: .gitignore  README.md  TODO.md  pyproject.toml
src/tinkpad/: __init__.py  _atomic.py  active.py  cache.py  cli.py  config.py  formatting.py  helpers.py  probe.py  registry.py  tinker_client.py  tui.py
tests/: test_active.py  test_cache_helpers.py  test_cli.py  test_critique_fixes.py  test_probe.py  test_registry.py
